# notebook

./: README.md  my-list.md
books/misc/: git-untracked-files.md
books/osteps/: README.md
books/osteps/chap31/: Cargo.toml  README.md
books/osteps/chap31/examples/: smp.rs
books/osteps/chap31/src/: lib.rs
dbs/: interests.md
rust/gtk-playround/: Cargo.toml  gtk.md
rust/gtk-playround/src/: main.rs
rust/network-manager/: zbus.md
