[package]
name = "chap30"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <ardtimeit@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5"
# tracing = "0.1.40"
# clap = { version = "4.4", features = ["derive"]}
log = "0.4"


[[bin]]
name = "reader-writer"
path = "src/bin/rw.rs"